# plastiwatch-rust

./: Cargo.toml  README.md  build.rs  build_output_2.txt  build_output_3.txt  sdkconfig.defaults
motion-detection_inferencing/: library.properties
motion-detection_inferencing/examples/esp32/esp32_camera/: esp32_camera.ino
motion-detection_inferencing/examples/esp32/esp32_fusion/: esp32_fusion.ino
motion-detection_inferencing/examples/esp32/esp32_microphone/: esp32_microphone.ino
motion-detection_inferencing/examples/esp32/esp32_microphone_continuous/: esp32_microphone_continuous.ino
motion-detection_inferencing/examples/nano_ble33_sense/nano_ble33_sense_accelerometer/: nano_ble33_sense_accelerometer.ino
motion-detection_inferencing/examples/nano_ble33_sense/nano_ble33_sense_accelerometer_continuous/: nano_ble33_sense_accelerometer_continuous.ino
motion-detection_inferencing/examples/nano_ble33_sense/nano_ble33_sense_camera/: nano_ble33_sense_camera.ino
motion-detection_inferencing/examples/nano_ble33_sense/nano_ble33_sense_fusion/: nano_ble33_sense_fusion.ino
motion-detection_inferencing/src/: ei_porting.cpp  ei_wrapper.cpp  ei_wrapper.h
motion-detection_inferencing/src/model-parameters/: anomaly_metadata.h  model_metadata.h  model_variables.h
motion-detection_inferencing/src/tflite-model/: tflite_learn_788951_35_compiled.cpp  tflite_learn_788951_35_compiled.h
src/: config.rs  ei.rs  events.rs  input.rs  main.rs
src/drivers/: display.rs  haptic.rs  imu.rs  mod.rs  sprites.rs
src/tasks/: ai.rs  mod.rs  power.rs  sensor.rs  ui.rs
(+20 files in other folders)
